Change predict function

--- a/rec.ipynb
+++ b/rec.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,6 @@
     "\n",
     "orders = orders[orders['user_id'].isin(users_subsample)]\n",
     "split(orders)\n",
-    "\n",
     "train_df, validation_df, test_df, user_enum, product_enum = load_data()"
    ]
   },
@@ -304,19 +303,19 @@
     "# Оптимально на один купленный 3 негативных\n",
     "for neg in tqdm([2,3,4,5]):\n",
     "    # Если обучаяем с нуля\n",
-    "#     recommender = Recommender(train_df, validation_df, test_df, neg_num=neg)\n",
-    "#     recommender.train_data.to_csv('saves/train_data_for_model-{}_neg.csv'.format(neg), index=False)\n",
-    "#     recommender.val_data.to_csv('saves/val_data_for_model.csv'.format(neg), index=False)\n",
-    "#     recommender.test_data.to_csv('saves/test_data_for_model.csv'.format(neg).csv', index=False)\n",
-    "#     recommender.set_components_number(5) # число компонент в эмбэдинге\n",
-    "#     recommender.fit('saves/model-5-{}neg.pickle'.format(neg), epochs=5)\n",
+    "    recommender = Recommender(train_df, validation_df, test_df, neg_num=neg)\n",
+    "    recommender.train_data.to_csv('saves/train_data_for_model-{}_neg.csv'.format(neg), index=False)\n",
+    "    recommender.val_data.to_csv('saves/val_data_for_model.csv', index=False)\n",
+    "    recommender.test_data.to_csv('saves/test_data_for_model.csv', index=False)\n",
+    "    recommender.set_components_number(5) # число компонент в эмбэдинге\n",
+    "    recommender.fit('saves/model-5-{}neg.pickle'.format(neg), epochs=10)\n",
     "\n",
     "    # Если уже обучили и сохранили данные и модели, то просто загружаем их\n",
-    "    recommender = Recommender(neg_num=neg)\n",
-    "    recommender.set_components_number(5) # число компонент в эмбэдинге\n",
-    "    recommender.set_data_for_model('saves/train_data_for_model-{}_neg.csv'.format(neg), 'saves/val_data_for_model.csv', 'saves/test_data_for_model.csv')\n",
-    "#     recommender.set_model('saves/model-5-{}neg.pickle'.format(neg))\n",
-    "    recommender.fit('saves/model-5-{}neg.pickle'.format(neg), epochs=10)\n",
+    "#     recommender = Recommender(neg_num=neg)\n",
+    "#     recommender.set_components_number(5) # число компонент в эмбэдинге\n",
+    "#     recommender.set_data_for_model('saves/train_data_for_model-{}_neg.csv'.format(neg), 'saves/val_data_for_model.csv', 'saves/test_data_for_model.csv')\n",
+    "# #     recommender.set_model('saves/model-5-{}neg.pickle'.format(neg))\n",
+    "#     recommender.fit('saves/model-5-{}neg.pickle'.format(neg), epochs=10)\n",
     "    \n",
     "    val_dict = recommender.val_data.groupby('user_id')['product_id'].apply(list).to_dict()\n",
     "    actual_val_dict = recommender.val_data[recommender.val_data['bought'] != 0].groupby('user_id')['product_id'].apply(list).to_dict()\n",
@@ -804,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -831,8 +830,8 @@
     "recommender = Recommender(neg_num=optimal_neg_num)\n",
     "recommender.set_components_number(optimal_comp_num)\n",
     "recommender.set_data_for_model('saves/train_data_for_model-{}_neg.csv'.format(optimal_neg_num), 'saves/val_data_for_model.csv', 'saves/test_data_for_model.csv')\n",
-    "recommender.fit('saves/model.pickle', epochs=10)\n",
-    "# recommender.set_model('saves/model-4-3neg.pickle')\n",
+    "# recommender.fit('saves/model.pickle', epochs=10)\n",
+    "recommender.set_model('saves/model.pickle')\n",
     "\n",
     "test_dict = recommender.test_data.groupby('user_id')['product_id'].apply(list).to_dict()\n",
     "actual_test_dict = recommender.test_data[recommender.test_data['bought'] != 0].groupby('user_id')['product_id'].apply(list).to_dict()\n",
@@ -853,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -861,74 +860,54 @@
      "output_type": "stream",
      "text": [
       "Recommendations:\n",
-      "Organic Turkey Bacon\n",
-      "Dishwasher Gel Free & Clear\n",
-      "Apple Honeycrisp Organic\n",
-      "Bag of Organic Bananas\n",
-      "Organic Blackberries\n",
-      "Organic Unsweetened Almond Milk\n",
-      "Organic Grape Tomatoes\n",
-      "Pure Vanilla Extract\n",
-      "Medium Navel Orange\n",
-      "Organic Avocado\n",
+      "Roasted Mushroom Pizza\n",
+      "Cage Free Large White Eggs\n",
+      "Classico Virgin Olive Oil Bruschnettini\n",
+      "Classic Almond Butter All Natural\n",
+      "Bread, Natural Fitness\n",
+      "Organic Vanilla Bean Ice Cream\n",
+      "Half & Half\n",
+      "Organic White Cheddar Popcorn\n",
+      "Greek Feta Cheese\n",
+      "Large Lemon\n",
       "\n",
       "Actual:\n",
-      "Key Lime Moisture Shave\n",
-      "Low Fat Kefir Cultured Milk Smoothie Lowfat Probiotic Blueberry\n",
-      "Sustainably Soft Bath Tissue\n",
-      "Organic Turmeric Tonic Juice\n",
-      "Mango Probiotic Juice Drink\n",
-      "Rhodiola Rosea, Standardized, Premium Extract, Vegetarian Vcaps\n",
-      "Organic Turkey Bacon\n",
-      "Hand Soap Lavender & Coconut\n",
-      "Dishwasher Gel Free & Clear\n",
-      "100% Recycled Paper Towels\n",
-      "Apple Honeycrisp Organic\n",
-      "Vanilla Coconut Milk Yogurt\n",
-      "Bag of Organic Bananas\n",
-      "Juice Beverage, Cold Pressed, Kale Apple Ginger Romaine Spinach Cucumber Celery Parsley Lemon\n",
-      "Maca Powder\n",
-      "Cherry Peppers, Hot, Sliced\n",
-      "Soy Free Buttery Spread\n",
-      "Ezekiel 4:9 Bread Organic Sprouted Whole Grain\n",
-      "Apple Cider Vinegar\n",
-      "Organic Large Extra Fancy Fuji Apple\n",
-      "Organic Mountain Forest Amber Honey\n",
-      "PlusShot Strawberry Probiotic Juice Drink\n",
-      "Alcohol-Free Witch Hazel Rose Petal Toner\n",
-      "Organic Blackberries\n",
-      "All One Hemp Peppermint Castile Soap Bar\n",
-      "Pepperoncini\n",
-      "Organic Unsweetened Almond Milk\n",
-      "Gluten Free Quick Cooking Oats\n",
-      "Elderflower & Rose Lemonade\n",
-      "Organic Red Kale\n",
-      "Vitamin D3 5000 I.U.\n",
-      "Organic Cripps Pink Apples\n",
-      "Fresh Bee Pollen Whole Granules\n",
-      "Kale Greens\n",
-      "Cavatappi No. 87 Macaroni\n",
-      "Raw Protein Chocolate Cacao\n",
-      "Carrot Cake Slice\n",
-      "Medium Navel Orange\n",
-      "Organic Avocado\n",
-      "Watercress Greens Juice\n",
-      "Gluten Free Pizza Three Cheese\n",
+      "Caramel Sauce\n",
+      "Organic Milk\n",
+      "Cornichons Gherkins\n",
+      "Vanilla Bean Ice Cream\n",
+      "Organic Unsalted Butter\n",
+      "Roasted Mushroom Pizza\n",
+      "Organic Salted Individually Wrapped Quarters Butter\n",
+      "Cage Free Large White Eggs\n",
+      "Organic Madagascar Vanilla Ice Cream\n",
+      "Lager Beer\n",
+      "Bread, Natural Fitness\n",
+      "Organic Curry Powder\n",
+      "Organic Vanilla Bean Ice Cream\n",
+      "Half & Half\n",
+      "Bolani Spinach Filled Flatbread\n",
+      "Sweet Batard\n",
+      "Organic Large Grade AA Brown Eggs\n",
+      "Double Fiber Whole Grain Sliced English Muffins\n",
+      "Frozen Dark Sweet Pitted Cherries\n",
+      "Broccoli Florets\n",
+      "Frozen Blueberries\n",
+      "Plain Pre-Sliced Bagels\n",
+      "Large Lemon\n",
       "\n",
       "Hits:\n",
-      "Organic Turkey Bacon\n",
-      "Dishwasher Gel Free & Clear\n",
-      "Apple Honeycrisp Organic\n",
-      "Bag of Organic Bananas\n",
-      "Organic Blackberries\n",
-      "Organic Unsweetened Almond Milk\n",
-      "Medium Navel Orange\n",
-      "Organic Avocado\n"
+      "Roasted Mushroom Pizza\n",
+      "Cage Free Large White Eggs\n",
+      "Bread, Natural Fitness\n",
+      "Organic Vanilla Bean Ice Cream\n",
+      "Half & Half\n",
+      "Large Lemon\n"
      ]
     }
    ],
    "source": [
-    "user_id = 123\n",
+    "user_id = 10\n",
     "user_data = recommender.test_data[recommender.test_data['user_id'] == user_id]\n",
     "actual = user_data[user_data['bought'] != 0]['product_id'].to_list()\n",
     "to_predict = user_data['product_id'].to_list()\n",
@@ -953,10 +932,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.2670181691646576, 0.27601850032806396],\n",
+       " [0.19860729575157166, 0.2309517115354538]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommender.predict([1, 1001], [3, 15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.23553025722503662,\n",
+       " 0.004860855173319578,\n",
+       " 0.23494558036327362,\n",
+       " 0.013939998112618923]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommender.predict_for_user(0, [3, 2, 0, 1])"
+   ]
   },
   {
    "cell_type": "code",
